--- a/santa-mondrian-claus/santa-mondrian-claus.csproj
+++ b/santa-mondrian-claus/santa-mondrian-claus.csproj
@@ -51,7 +51,8 @@
     <Compile Include="Gift.cs" />
     <Compile Include="GiftHelper.cs" />
     <Compile Include="GiftRepartition.cs" />
-    <Compile Include="ProblemConstats.cs" />
+    <Compile Include="Extensions\ListExtensions.cs" />
+    <Compile Include="ProblemConstants.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Geometry\QuadTree\QuadTree.cs" />
